--- a/devengacion-inventarios/src/main/resources/templates/fragments/grupos_form.html
+++ b/devengacion-inventarios/src/main/resources/templates/fragments/grupos_form.html
@@ -1,14 +1,6 @@
-<!--<!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="UTF-8">
-	<title>Nuevo grupo</title>
-</head>
-
-<body>-->
 <!-- Modal -->
-<div class="modal fade" id="modalFormGrupoTecnico" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modalFormTechnicalGroup" tabindex="-1" role="dialog" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<div class="modal-header headerRegister">
@@ -20,28 +12,28 @@
 			<div class="modal-body">
 				<div class="tile">
 					<div class="tile-body">
-						<form th:method="post" enctype="multipart/form-data" id="formGrupoTecnico"
-							th:action="@{'/grupos/guardar'}">
+						<form th:method="post" enctype="multipart/form-data" id="formTechnicalGroup"
+							th:action="@{'/technicalGroups/save'}">
 							<input type="hidden" id="id" name="id">
 							<input type="hidden" id="_method" name="_method" value="post" />
 							<div class="form-group">
-								<label class="control-label">CODIGO DE GRUPO</label>
-								<input class="form-control" id="codigo" name="codigo" type="text"
-									placeholder="Codigo de grupo">
+								<label class="control-label">NOMBRE DE GRUPO</label>
+								<input class="form-control" id="name" name="name" type="text"
+									placeholder="Nombre de grupo">
 							</div>
 							<div class="form-group">
 								<label class="control-label">JEFE DE GRUPO</label>
-								<input class="form-control" id="jefeDeGrupo" name="jefeDeGrupo" type="text"
+								<input class="form-control" id="groupLeader" name="groupLeader" type="text"
 									placeholder="Jefe de grupo">
 							</div>
 							<div class="form-group">
 								<label class="control-label">DESCRIPCION</label>
-								<textarea class="form-control" id="descripcion" name="descripcion" type="text"
+								<textarea class="form-control" id="description" name="description" type="text"
 									placeholder="Descripcion"></textarea>
 							</div>
 							<div class="form-group">
 								<label for="exampleSelect1">ESTADO</label>
-								<select class="form-control" id="estado" name="estado">
+								<select class="form-control" id="state" name="state">
 									<option value="1">ACTIVO</option>
 									<option value="2">INACTIVO</option>
 								</select>
