--- a/devengacion-inventarios/src/main/resources/templates/technicalGroups.html
+++ b/devengacion-inventarios/src/main/resources/templates/technicalGroups.html
@@ -137,5 +137,5 @@
 	}
 </script>
 
-<div th:replace="fragments/grupos_form"></div>
+<div th:replace="fragments/form_TechnicalGroup"></div>
 <div th:replace="fragments/footer"></div>
