--- a/devengacion-inventarios/src/main/resources/templates/fragments/form_TechnicalGroup.html
+++ b/devengacion-inventarios/src/main/resources/templates/fragments/form_TechnicalGroup.html
@@ -1,10 +1,9 @@
 
-<!-- Modal -->
-<div class="modal fade" id="modalFormTechnicalGroup" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modalFormTechnicalGroup" role="dialog" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<div class="modal-header headerRegister">
-				<h5 class="modal-title" id="titleModal">Nuevo Grupo Tecnico</h5>
+				<h5 class="modal-title" id="titleModal">NUEVO GRUPO TECNICO</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
