--- a/devengacion-inventarios/src/main/resources/templates/fragments/sidebar.html
+++ b/devengacion-inventarios/src/main/resources/templates/fragments/sidebar.html
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 	<ul class="app-menu">
-		<li><a th:class="'app-menu__item '+${activeTechnicalGroups}" th:href="@{/technicalGroups}"><i
+		<li><a th:class="'app-menu__item '+${activoGrupoTecnicos}" th:href="@{/grupos}"><i
 					class="app-menu__icon fa fa-users"></i><span class="app-menu__label">Grupos Tecnicos</span></a></li>
 		<li><a th:class="'app-menu__item '+${activoMateriales}" th:href="@{/materiales}"><i
 					class="app-menu__icon fa fa-gavel"></i><span class="app-menu__label">Materiales</span></a></li>
