Materials module, Excel file upload, and validations

--- a/devengacion-inventarios/bin/src/main/resources/templates/materiales.html
+++ b/devengacion-inventarios/bin/src/main/resources/templates/materiales.html
@@ -37,7 +37,7 @@
 										<th>ID</th>
 										<th>CODIGO</th>
 										<th>NOMBRE</th>
-										<th>TIPO</th>
+										<th>ELEMENTO</th>
 										<!--<th>SERIE 1</th>
 										<th>SERIE 2</th>-->
 										<th>ESTADO</th>
