--- a/devengacion-inventarios/bin/src/main/resources/templates/fragments/sidebar.html
+++ b/devengacion-inventarios/bin/src/main/resources/templates/fragments/sidebar.html
@@ -9,11 +9,11 @@
 		</div>
 	</div>
 	<ul class="app-menu">
-		<li><a th:class="'app-menu__item '+${activoGrupoTecnicos}" th:href="@{/technicalGroups}"><i
+		<li><a th:class="'app-menu__item '+${activoGrupoTecnicos}" th:href="@{/grupos}"><i
 					class="app-menu__icon fa fa-users"></i><span class="app-menu__label">Grupos Tecnicos</span></a></li>
-		<li><a th:class="'app-menu__item '+${activoMateriales}" th:href="@{/materials}"><i
+		<li><a th:class="'app-menu__item '+${activoMateriales}" th:href="@{/materiales}"><i
 					class="app-menu__icon fa fa-gavel"></i><span class="app-menu__label">Materiales</span></a></li>
-		<li><a th:class="'app-menu__item '+${activoInventarios}" th:href="@{/inventory}"><i
+		<li><a th:class="'app-menu__item '+${activoInventarios}" th:href="@{/inventarios}"><i
 					class="app-menu__icon fa fa-archive"></i><span class="app-menu__label">Inventario</span></a></li>
 		<li><a th:class="'app-menu__item '+${activoDevengaciones}" th:href="@{/devengaciones}"><i
 					class="app-menu__icon fa fa-line-chart"></i><span class="app-menu__label">Devengaciones</span></a>
