--- a/devengacion-inventarios/src/main/resources/templates/fragments/form_Inventory.html
+++ b/devengacion-inventarios/src/main/resources/templates/fragments/form_Inventory.html
@@ -1,4 +1,4 @@
-    <div class="modal fade" id="modalFormInventario" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade" id="modalFormInventory" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header headerRegister">
