--- a/devengacion-inventarios/src/main/resources/templates/login.html
+++ b/devengacion-inventarios/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 	</section>
 	<section class="login-content">
 		<div class="logo">
-			<h1>TicketApp</h1>
+			<h1>Gestión App</h1>
 		</div>
 		<div th:if="${param.error}" class="alert alert-warning alert-dismissible fade show text-center message">Usuario y contraseña incorrecta</div>
 
