--- a/devengacion-inventarios/src/main/resources/templates/fragments/navbar.html
+++ b/devengacion-inventarios/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,4 @@
-<header class="app-header bg-danger"><a class="app-header__logo bg-danger" href="/">GestionApp</a>
+<header class="app-header bg-primary"><a class="app-header__logo bg-primary" href="/">GestionApp</a>
 	<!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar"
 		aria-label="Hide Sidebar"></a>
 	<!-- Navbar Right Menu-->
